Replace hero image source with a placeholder image for "Professional Growth"

--- a/ui-kit.html
+++ b/ui-kit.html
@@ -383,7 +383,7 @@
           </div>
           <div class="hero-visual">
             <div class="hero-image">
-              <img src="https://picsum.photos/300/300?random=2" alt="Professional Growth" class="w-full h-full object-cover rounded-2xl">
+              <img src="https://via.placeholder.com/300x300/3F0C1E/FFEBD8?text=Growth" alt="Professional Growth" class="w-full h-full object-cover rounded-2xl">
             </div>
           </div>
         </div>
