--- a/landing-indomismo-elegant.html
+++ b/landing-indomismo-elegant.html
@@ -56,9 +56,8 @@
             <button class="bg-gradient-to-r from-amber-500 to-amber-600 hover:from-amber-400 hover:to-amber-500 text-black font-bold text-lg px-10 py-4 rounded-xl shadow-xl hover:shadow-amber-500/30 transition-all duration-300">
               Sí, quiero mi transformación ahora
             </button>
-            <div class="flex items-center gap-4 text-sm text-gray-400">
+            <div class="flex flex-col sm:flex-row items-start sm:items-center gap-2 text-sm text-gray-400">
               <span class="flex items-center gap-1">⚡ Solo quedan 3 cupos</span>
-              <span>•</span>
               <span class="flex items-center gap-1">🎯 Garantía 30 días</span>
             </div>
           </div>
