--- a/landing-select.html
+++ b/landing-select.html
@@ -169,12 +169,6 @@
 
   <!-- Sección 2 - Conexión Directa (¿Te ha pasado esto?) -->
   <section id="problema" class="py-20 px-4 bg-gradient-to-b from-gray-900 to-black">
-    <div class="text-center mb-8">
-      <div
-        class="inline-flex items-center justify-center w-16 h-16 bg-gradient-to-r from-amber-400 to-amber-600 rounded-full shadow-lg shadow-amber-500/30 mb-4">
-        <span class="text-black font-bold text-2xl">2</span>
-      </div>
-    </div>
     <div class="max-w-4xl mx-auto text-center">
       <h2 class="text-3xl md:text-4xl font-bold mb-12 text-white">¿Te ha pasado esto?</h2>
 
@@ -210,12 +204,6 @@
 
   <!-- Sección 3 - Beneficios Transformacionales -->
   <section id="beneficios" class="py-20 px-4 bg-gradient-to-b from-black via-gray-900 to-black">
-    <div class="text-center mb-8">
-      <div
-        class="inline-flex items-center justify-center w-16 h-16 bg-gradient-to-r from-amber-400 to-amber-600 rounded-full shadow-lg shadow-amber-500/30 mb-4">
-        <span class="text-black font-bold text-2xl">3</span>
-      </div>
-    </div>
     <div class="max-w-6xl mx-auto text-center">
       <h2 class="text-3xl md:text-4xl font-bold mb-4 text-white">Lo que vas a despertar en este camino</h2>
       <p class="text-lg text-gray-300 mb-12 max-w-2xl mx-auto">
@@ -297,7 +285,7 @@
           </h3>
           <h3 class="text-2xl md:text-3xl lg:text-4xl font-bold text-amber-400 leading-tight">
             Viniste a <span
-              class="text-transparent bg-clip-text bg-gradient-to-r from-amber-300 to-yellow-400">despertar</span>.
+              class="text-transparent bg-clip-text bg-gradient-to-r from-amber-300 text-white">despertar</span>.
           </h3>
         </div>
       </div>
@@ -415,12 +403,6 @@
 
   <!-- Social Proof -->
   <section id="testimonios" class="py-20 px-4 bg-gradient-to-b from-black via-gray-900 to-black">
-    <div class="text-center mb-8">
-      <div
-        class="inline-flex items-center justify-center w-16 h-16 bg-gradient-to-r from-amber-400 to-amber-600 rounded-full shadow-lg shadow-amber-500/30 mb-4">
-        <span class="text-black font-bold text-2xl">5</span>
-      </div>
-    </div>
     <div class="max-w-6xl mx-auto">
       <div class="text-center mb-16">
         <div class="inline-flex items-center gap-2 bg-brand-cream/10 px-6 py-3 rounded-full mb-6">
@@ -484,12 +466,6 @@
 
   <!-- Sección 4 - ¿Qué incluye Indomismo Humano? -->
   <section id="programa" class="py-20 px-4 bg-gradient-to-b from-gray-900 via-black to-gray-900">
-    <div class="text-center mb-8">
-      <div
-        class="inline-flex items-center justify-center w-16 h-16 bg-gradient-to-r from-amber-400 to-amber-600 rounded-full shadow-lg shadow-amber-500/30 mb-4">
-        <span class="text-black font-bold text-2xl">4</span>
-      </div>
-    </div>
     <div class="max-w-6xl mx-auto">
       <div class="text-center mb-12">
         <h2 class="text-4xl font-bold mb-4 text-white">¿Qué incluye Indomismo Humano?</h2>
@@ -709,10 +685,6 @@
   <section id="cronograma" class="py-16 px-4 bg-gradient-to-b from-black via-gray-900 to-black">
     <div class="max-w-5xl mx-auto">
       <div class="text-center mb-10">
-        <div
-          class="inline-flex items-center justify-center w-16 h-16 bg-gradient-to-r from-amber-400 to-amber-600 rounded-full shadow-lg shadow-amber-500/30 mb-4">
-          <span class="text-black font-bold text-2xl">5</span>
-        </div>
         <h2 class="text-3xl md:text-4xl font-bold mb-3 text-white">Tu transformación semana a semana</h2>
         <p class="text-lg text-gray-300">Cronograma del Método Indomismo</p>
       </div>
@@ -867,12 +839,6 @@
 
   <!-- Sección 6 - Sobre Amparo Moles -->
   <section id="amparo" class="py-20 px-4 bg-gradient-to-b from-gray-900 to-black">
-    <div class="text-center mb-8">
-      <div
-        class="inline-flex items-center justify-center w-16 h-16 bg-gradient-to-r from-amber-400 to-amber-600 rounded-full shadow-lg shadow-amber-500/30 mb-4">
-        <span class="text-black font-bold text-2xl">6</span>
-      </div>
-    </div>
     <div class="max-w-6xl mx-auto">
       <div class="text-center mb-12">
         <h2 class="text-4xl font-bold mb-4 text-white">Conoce a tu guía</h2>
@@ -1052,12 +1018,6 @@
 
   <!-- FAQ Section -->
   <section id="faq" class="py-20 px-4 bg-gradient-to-b from-black via-gray-900 to-black">
-    <div class="text-center mb-8">
-      <div
-        class="inline-flex items-center justify-center w-16 h-16 bg-gradient-to-r from-amber-400 to-amber-600 rounded-full shadow-lg shadow-amber-500/30 mb-4">
-        <span class="text-black font-bold text-2xl">7</span>
-      </div>
-    </div>
     <div class="max-w-4xl mx-auto">
       <div class="text-center mb-12">
         <h2 class="text-4xl font-bold mb-4 text-white">Preguntas frecuentes</h2>
@@ -1180,12 +1140,6 @@
 
   <!-- Sección 8 - Cierre y CTA Final -->
   <section id="cta-final" class="py-20 px-4 bg-gradient-to-b from-gray-900 to-black">
-    <div class="text-center mb-8">
-      <div
-        class="inline-flex items-center justify-center w-16 h-16 bg-gradient-to-r from-amber-400 to-amber-600 rounded-full shadow-lg shadow-amber-500/30 mb-4">
-        <span class="text-black font-bold text-2xl">8</span>
-      </div>
-    </div>
     <div class="max-w-4xl mx-auto text-center">
       <h2 class="text-4xl md:text-5xl font-bold mb-8 text-white">El momento de tu transformación es ahora</h2>
 
@@ -1331,8 +1285,8 @@
 
   <!-- Botón de scroll to top -->
   <button id="scrollTop"
-    class="fixed bottom-6 right-6 w-14 h-14 bg-gradient-to-r from-amber-500 to-amber-600 hover:from-amber-400 hover:to-amber-500 rounded-full flex items-center justify-center shadow-xl shadow-amber-500/40 opacity-0 invisible transition-all duration-300 z-50 hover:scale-110">
-    <svg class="w-6 h-6 text-black" fill="currentColor" viewBox="0 0 20 20">
+    class="fixed bottom-8 right-8 w-16 h-16 bg-gradient-to-br from-amber-500 to-amber-600 hover:from-amber-400 hover:to-amber-500 rounded-2xl flex items-center justify-center shadow-2xl shadow-amber-500/50 opacity-0 invisible transition-all duration-300 z-50 hover:scale-110 border-2 border-amber-400/30 hover:border-amber-300 backdrop-blur-sm">
+    <svg class="w-8 h-8 text-black font-bold" fill="currentColor" viewBox="0 0 20 20" stroke="currentColor" stroke-width="0.5">
       <path fillRule="evenodd"
         d="M3.293 9.707a1 1 0 010-1.414l6-6a1 1 0 011.414 0l6 6a1 1 0 01-1.414 1.414L11 5.414V17a1 1 0 11-2 0V5.414L4.707 9.707a1 1 0 01-1.414 0z"
         clipRule="evenodd" />
