feat: update badge styling for enhanced visibility and minimalism

--- a/web/presentacion_1.html
+++ b/web/presentacion_1.html
@@ -47,11 +47,10 @@
         <!-- Content Column -->
         <div class="space-y-8">
 
-          <!-- Badge superior -->
-          <div
-            class="inline-flex items-center px-4 py-2 bg-gradient-to-r from-amber-400/20 to-amber-600/20 border border-amber-400/30 rounded-full text-amber-300 font-semibold text-sm mb-6">
-            <span class="mr-2">⚡</span>
-            Transformación Acelerada en 8 Semanas
+          <!-- Badge superior minimalista -->
+          <div class="inline-flex items-center gap-3 px-0 py-2 bg-amber-400/10 rounded-xl text-amber-300 font-medium text-sm mb-6 backdrop-blur-sm">
+            <span class="text-amber-400 text-lg">⚡</span>
+            <span class="text-amber-200">Transformación Acelerada en 8 Semanas</span>
           </div>
 
           <!-- 1. ENCABEZADO (HEADLINE) -->
