Refactor code structure for improved readability and maintainability

--- a/landing-select.html
+++ b/landing-select.html
@@ -15,7 +15,8 @@
   <header class="sticky top-0 z-50 backdrop-blur-lg bg-black/90 border-b border-amber-400/20 py-4">
     <div class="max-w-7xl mx-auto px-4 flex items-center justify-between">
       <div class="flex items-center">
-        <div class="text-xl font-bold text-amber-300">Indomismo Humano</div>
+        <img src="https://tailwindui.com/img/logos/mark.svg?color=amber&shade=400" alt="Logo"
+          class="h-8 w-8 ml-2">
       </div>
 
       <div class="flex items-center gap-4">
