--- a/web/presentacion_1.html
+++ b/web/presentacion_1.html
@@ -12,10 +12,11 @@
 
 <body class="min-h-screen">
   <!-- Header Optimizado para Conversión -->
-  <header class="sticky top-0 z-50 backdrop-blur-lg bg-black/90 border-b border-amber-400/20 py-4">
+  <header class="sticky top-0 z-50 backdrop-blur-lg bg-black/90 border-b border-amber-400/20 py-5">
     <div class="max-w-7xl mx-auto px-4 flex items-center justify-between">
       <div class="flex items-center">
-        <div class="text-xl font-bold text-amber-300">Indomismo Humano</div>
+        <img src="../assets/images/logos/logo.png" alt="Indomismo Humano Logo"
+          class="h-16 w-auto max-w-[350px] object-contain">
       </div>
 
       <div class="flex items-center gap-4">
@@ -871,7 +872,7 @@
         <div class="lg:col-span-1">
           <div class="relative rounded-3xl overflow-hidden shadow-2xl">
             <img
-              src="https://images.unsplash.com/photo-1580489944761-15a19d654956?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&h=500"
+              src="../assets/images/instructora-indomismo.png"
               alt="Amparo Moles - Guía de transformación" class="w-full h-[500px] object-cover">
             <div class="absolute inset-0 bg-gradient-to-t from-black/60 via-transparent to-black/20"></div>
 
