--- a/web/presentacion_1.html
+++ b/web/presentacion_1.html
@@ -130,7 +130,7 @@
         <div class="relative">
           <div class="relative rounded-3xl overflow-hidden shadow-2xl">
             <img
-              src="https://images.unsplash.com/photo-1573496359142-b8d87734a5a2?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=600&h=700"
+              src="../assets/images/instructora-indomismo.png"
               alt="Mujer transformada y empoderada" class="w-full h-[700px] object-cover">
             <div class="absolute inset-0 bg-gradient-to-t from-black/50 via-transparent to-black/10"></div>
 
