Implement code changes to enhance functionality and improve performance

--- a/web/index.html
+++ b/web/index.html
@@ -39,7 +39,7 @@
   </header>
 
   <!-- Hero Section Corporativo -->
-  <section id="inicio" class="py-20 bg-gradient-to-br from-gray-50 to-white">
+  <section id="inicio" class="py-20 bg-gradient-to-br from-amber-50 to-white border-b border-gray-100">
     <div class="max-w-6xl mx-auto px-4">
       <div class="grid lg:grid-cols-2 gap-16 items-center">
         
@@ -144,7 +144,7 @@
   </section>
 
   <!-- Sección Sobre Mí -->
-  <section id="sobre-mi" class="py-20 bg-white">
+  <section id="sobre-mi" class="py-20 bg-white border-b border-gray-100">
     <div class="max-w-4xl mx-auto px-4">
       <div class="text-center mb-16">
         <h2 class="text-4xl font-bold text-gray-900 mb-6">Mi Historia</h2>
@@ -212,7 +212,7 @@
   </section>
 
   <!-- Sección Programas -->
-  <section id="programas" class="py-20 bg-gray-50">
+  <section id="programas" class="py-20 bg-gray-50 border-b border-gray-200">
     <div class="max-w-6xl mx-auto px-4">
       <div class="text-center mb-16">
         <h2 class="text-4xl font-bold text-gray-900 mb-6">Mis Programas</h2>
@@ -325,7 +325,7 @@
   </section>
 
   <!-- Sección Testimonios -->
-  <section id="testimonios" class="py-20 bg-gradient-to-br from-gray-50 via-white to-gray-50 relative overflow-hidden">
+  <section id="testimonios" class="py-20 bg-gradient-to-br from-white via-amber-50/30 to-white relative overflow-hidden border-b border-gray-100">
     <!-- Elementos decorativos sutiles -->
     <div class="absolute top-10 left-10 w-32 h-32 bg-amber-100 rounded-full opacity-20 blur-3xl"></div>
     <div class="absolute bottom-20 right-20 w-24 h-24 bg-amber-200 rounded-full opacity-30 blur-2xl"></div>
@@ -610,7 +610,7 @@
   </section>
 
   <!-- Sección Libros y Publicaciones -->
-  <section id="libros" class="py-20 bg-gray-50">
+  <section id="libros" class="py-20 bg-gray-100 border-b border-gray-200">
     <div class="max-w-6xl mx-auto px-4">
       <div class="text-center mb-16">
         <h2 class="text-4xl font-bold text-gray-900 mb-6">Mis Libros</h2>
@@ -662,7 +662,7 @@
   </section>
 
   <!-- Sección Media y Apariciones -->
-  <section id="media" class="py-20 bg-gray-50">
+  <section id="media" class="py-20 bg-white border-b border-gray-100">
     <div class="max-w-6xl mx-auto px-4">
       <div class="text-center mb-16">
         <h2 class="text-4xl font-bold text-gray-900 mb-6">Media y Apariciones</h2>
@@ -731,7 +731,7 @@
   </section>
 
   <!-- Sección Contacto -->
-  <section id="contacto" class="py-20 bg-white">
+  <section id="contacto" class="py-20 bg-gray-50 border-b border-gray-200">
     <div class="max-w-4xl mx-auto px-4">
       <div class="text-center mb-16">
         <h2 class="text-4xl font-bold text-gray-900 mb-6">Trabajemos Juntas</h2>
