--- a/web/landing-indomismo.html
+++ b/web/landing-indomismo.html
@@ -128,38 +128,11 @@
 
         <!-- Image Column -->
         <div class="relative">
-          <div class="relative rounded-3xl overflow-hidden shadow-2xl">
-            <img
-              src="../assets/images/instructora-indomismo.png"
-              alt="Mujer transformada y empoderada" class="w-full h-[700px] object-cover">
-            <div class="absolute inset-0 bg-gradient-to-t from-black/50 via-transparent to-black/10"></div>
-
-            <!-- Floating Testimonial -->
-            <div
-              class="absolute bottom-8 left-8 right-8 bg-black/90 backdrop-blur-xl rounded-2xl p-6 border border-amber-400/30 shadow-2xl">
-              <div class="flex items-start gap-4">
-                <img src="https://randomuser.me/api/portraits/women/67.jpg" alt="Cliente testimonial"
-                  class="w-12 h-12 rounded-full object-cover border-2 border-amber-400/50 flex-shrink-0">
-                <div class="flex-1">
-                  <div class="flex items-center gap-2 mb-2">
-                    <span class="text-white font-semibold text-sm">Liliana R.</span>
-                    <span class="text-amber-400 text-xs">★★★★★</span>
-                  </div>
-                  <p class="text-gray-200 text-sm leading-relaxed">
-                    "En 6 semanas liberé <strong class="text-amber-300">15 años de ansiedad</strong>. ¡Increíble!"
-                  </p>
-                  <div class="text-xs text-gray-400 mt-2">Semana 6 • Método Indomismo</div>
-                </div>
-              </div>
+          <div class="relative rounded-3xl overflow-hidden shadow-2xl bg-black">
+            <div class="relative w-full h-[300px] sm:h-[400px] lg:h-[700px]">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/e74BImATfJg?si=VnM4KPpVDuWJIIH7&autoplay=1&mute=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
-
-            <!-- Floating Stats -->
-            <div class="absolute top-8 right-8 bg-black/80 backdrop-blur-md rounded-xl p-4 border border-amber-400/20">
-              <div class="text-center">
-                <div class="text-amber-400 text-2xl font-bold">8</div>
-                <div class="text-gray-300 text-xs">Semanas</div>
-              </div>
-            </div>
+            <div class="absolute inset-0 pointer-events-none bg-gradient-to-t from-black/30 via-transparent to-black/10"></div>
           </div>
         </div>
 
@@ -285,7 +258,7 @@
           </h3>
           <h3 class="text-2xl md:text-3xl lg:text-4xl font-bold text-amber-400 leading-tight">
             Viniste a <span
-              class="text-transparent bg-clip-text bg-gradient-to-r from-amber-300 text-white">despertar</span>.
+              class="text-transparent bg-clip-text bg-gradient-to-r from-amber-300 to-white">despertar</span>.
           </h3>
         </div>
       </div>
